--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/aphom/Documents/Eclipse Jar/craftbukkit-1.16.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/aphom/Documents/Eclipse Jar/Server Jar/craftbukkit-1.16.4_R3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
